# GooFitX

./: .gitignore  .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt  fitting.cpp  simple.cpp
include/goofit/: Application.hpp  FCN.hpp  Global.hpp  Int.hpp  Log.hpp  Params.hpp  Registry.hpp  RegistryNoInl.hpp
include/goofit/PDFs/: PDF.hpp
include/goofit/PDFs/simple/: Gauss.hpp
include/goofit/core/: FCN.hpp  FitManager.hpp  Gauss.hpp  Global.hpp  Int.hpp  Metric.hpp  PDF.hpp  Registry.hpp  RegistryNoInl.hpp  Variable.hpp
python/: CMakeLists.txt  goofit.cpp  pyhelpers.hpp
python/PDFs/: PDF.cpp
python/PDFs/simple/: Gauss.cpp
python/core/: FCN.cpp  FitManager.cpp  Gauss.cpp  Global.cpp  Int.cpp  Metric.cpp  PDF.cpp  Params.cpp  Registry.cpp  Variable.cpp
python/examples/: fitting.py  simple.py
scripts/: make_binding.py  make_bindings.py
tests/: CMakeLists.txt  test_fitting.cpp
